# zivid-cpp-samples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  sdk_version.json
Downsample/: CMakeLists.txt  Downsample.cpp
Zivid/: CMakeLists.txt
Zivid/CaptureHDRCompleteSettings/: CaptureHDRCompleteSettings.cpp
Zivid/CaptureHDRLoop/: CaptureHDRLoop.cpp
Zivid/CaptureSavePLY/: CaptureSavePLY.cpp
Zivid/ConnectToSerialNumberCamera/: ConnectToSerialNumberCamera.cpp
Zivid/GetCameraIntrinsics/: GetCameraIntrinsics.cpp
Zivid/ReadZDF/: ReadZDF.cpp
Zivid/ZDF2PLY/: ZDF2PLY.cpp
ZividOpenCV/: CMakeLists.txt
ZividOpenCV/CaptureUndistortRGB/: CaptureUndistortRGB.cpp
ZividOpenCV/ZDF2OpenCV/: ZDF2OpenCV.cpp
ZividPCL/: CMakeLists.txt
ZividPCL/CaptureFromFileWritePCLVis3D/: CaptureFromFileWritePCLVis3D.cpp
ZividPCL/CaptureWritePCLVis3D/: CaptureWritePCLVis3D.cpp
ZividPCL/ReadPCLVis3D/: ReadPCLVis3D.cpp
ZividPCL/ZDF2PCD/: ZDF2PCD.cpp
source/: CMakeLists.txt  settingsDarkNonReflectivePlastic.yml  settingsDarkNonReflectivePlasticModifiedSameDynamicRange.yml  settingsDarkReflectivePlasticModifiedSameDynamicRange.yml  settingsLightNonReflectivePlasticModifiedSameDynamicRange.yml  settingsLightNonReflectivePlasticModifiedZividRecomendation.yml  settingsLightReflectivePlasticModifiedSameDynamicRange.yml  settingsMixedColorPlasticModifiedSameDynamicRange.yml  settingsPolishedMetal.yml  settingsPolishedMetalModifiedSameDynamicRange.yml  settingsSandblastedMetal.yml  settingsSandblastedMetalModifiedSameDynamicRange.yml  settingsSandblastedMetalZividRecommended.yml
source/Applications/: PointCloudTutorial.md
source/Applications/Advanced/BarcodeDetector/: BarcodeDetector.cpp
source/Applications/Advanced/CaptureUndistort2D/: CaptureUndistort2D.cpp
source/Applications/Advanced/CaptureUndistortRGB/: CaptureUndistortRGB.cpp
source/Applications/Advanced/CreateDepthMap/: CreateDepthMap.cpp
source/Applications/Advanced/Downsample/: Downsample.cpp
source/Applications/Advanced/GammaCorrection/: GammaCorrection.cpp
source/Applications/Advanced/HandEyeCalibration/: README.md
source/Applications/Advanced/MaskPointCloud/: MaskPointCloud.cpp
source/Applications/Advanced/MultiCamera/: MultiCameraTutorial.md  README.md
source/Applications/Advanced/ProjectAndFindMarker/: ProjectAndFindMarker.cpp
source/Applications/Advanced/ROIBoxViaArucoMarker/: ROIBoxViaArucoMarker.cpp
source/Applications/Advanced/ROIBoxViaCheckerboard/: ROIBoxViaCheckerboard.cpp
source/Applications/Advanced/ReadProjectAndCaptureImage/: ReadProjectAndCaptureImage.cpp
source/Applications/Advanced/ReprojectPoints/: ReprojectPoints.cpp
source/Applications/Advanced/SimplePlaceAlgorithm/: SimplePlaceAlgorithm.cpp
source/Applications/Advanced/StitchContinuouslyRotatingObject/: StitchContinuouslyRotatingObject.cpp
source/Applications/Advanced/StitchUsingRobotMountedCamera/: StitchUsingRobotMountedCamera.cpp
source/Applications/Advanced/StitchViaLocalPointCloudRegistration/: StitchViaLocalPointCloudRegistration.cpp
source/Applications/Advanced/TransformPointCloudFromMillimetersToMeters/: TransformPointCloudFromMillimetersToMeters.cpp
source/Applications/Advanced/TransformPointCloudViaArucoMarker/: TransformPointCloudViaArucoMarker.cpp
source/Applications/Advanced/TransformPointCloudViaCheckerboard/: TransformPointCloudViaCheckerboard.cpp
source/Applications/Advanced/TransformViaArucoMarker/: TransformViaArucoMarker.cpp
source/C_API/: CMakeLists.txt
source/C_API/CoreCAPI/: CMakeLists.txt  ZividCapi.cpp
source/C_API/SingleCaptureCAPI/: CMakeLists.txt  SingleCaptureCAPI.c
source/C_API/single_capture_rust/: README.md
source/C_API/single_capture_rust/zivid/: Cargo.toml  build.rs
source/Camera/Advanced/AllocateMemoryForPointCloudData/: AllocateMemoryForPointCloudData.cpp
source/Camera/Advanced/Capture2D+3D/: Capture2D+3D.cpp
source/Camera/Advanced/Capture2DAnd3D/: Capture2DAnd3D.cpp
source/Camera/Advanced/CaptureAgainBasedOnCoverage/: CaptureAgainBasedOnCoverage.cpp
source/Camera/Advanced/CaptureAndPrintNormals/: CaptureAndPrintNormals.cpp
source/Camera/Advanced/CaptureHDRLoop/: CaptureHDRLoop.cpp
source/Camera/Advanced/CaptureHDRPrintNormals/: CaptureHDRPrintNormals.cpp
source/Camera/Advanced/CaptureHalconViaGenICam/: CaptureHalconViaGenICam.cpp
source/Camera/Advanced/CaptureHalconViaZivid/: CaptureHalconViaZivid.cpp
source/Camera/Advanced/CaptureViaGenICam/: CaptureViaGenICam.cpp
source/Camera/Advanced/MultiCameraCaptureInParallel/: MultiCameraCaptureInParallel.cpp
source/Camera/Advanced/MultiCameraCaptureSequentially/: MultiCameraCaptureSequentially.cpp
source/Camera/Advanced/MultiCameraCaptureSequentiallyWithInterleavedProcessing/: MultiCameraCaptureSequentiallyWithInterleavedProcessing.cpp
source/Camera/Basic/: CaptureTutorial.md  QuickCaptureTutorial.md
source/Camera/Basic/Capture/: Capture.cpp
source/Camera/Basic/Capture2D/: Capture2D.cpp
source/Camera/Basic/CaptureAssistant/: CaptureAssistant.cpp
source/Camera/Basic/CaptureFromFile/: CaptureFromFile.cpp
source/Camera/Basic/CaptureFromFileCamera/: CaptureFromFileCamera.cpp
source/Camera/Basic/CaptureHDR/: CaptureHDR.cpp
source/Camera/Basic/CaptureHDRCompleteSettings/: CaptureHDRCompleteSettings.cpp
source/Camera/Basic/CaptureHDRLoop/: CaptureHDRLoop.cpp
source/Camera/Basic/CaptureWithSettingsFromYML/: CaptureWithSettingsFromYML.cpp
source/Camera/InfoUtilOther/AutomaticNetworkConfigurationForCameras/: AutomaticNetworkConfigurationForCameras.cpp
source/Camera/InfoUtilOther/CameraInfo/: CameraInfo.cpp
source/Camera/InfoUtilOther/CameraUserData/: CameraUserData.cpp
source/Camera/InfoUtilOther/CaptureWithDiagnostics/: CaptureWithDiagnostics.cpp
source/Camera/InfoUtilOther/FirmwareUpdater/: FirmwareUpdater.cpp
source/Settings/set1/: frame_01.yml  frame_02.yml  frame_03.yml
source/Settings/set2/: frame_01.yml  frame_02.yml  frame_03.yml
source/Settings/set3/: frame_01.yml  frame_02.yml  frame_03.yml
source/cmake/: CompilerOptions.cmake
(+71 files in other folders)
